feat: Restructure to MVC architecture with product management
BREAKING CHANGE: Complete application restructure
- Remove user management system
- Add MVC architecture (Model-View-Controller)
- Add comprehensive product management system
- Add advanced discount system with Decorator pattern
- Add interactive demonstration with detailed output

New features:
- Product CRUD operations
- Category-based discounts
- Universal coupons
- Statistics and reporting
- Rich user interface

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "decorator-application",
   "version": "1.0.0",
-  "description": "Uma aplicação TypeScript simples",
-  "main": "dist/index.js",
+  "description": "Uma aplicação TypeScript demonstrando arquitetura MVC e padrão Decorator",
+  "main": "dist/app.js",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/index.js",
-    "dev": "ts-node src/index.ts",
+    "start": "node dist/app.js",
+    "dev": "ts-node src/app.ts",
     "watch": "tsc --watch",
     "clean": "rimraf dist"
   },
