--- a/package.json
+++ b/package.json
@@ -1,23 +1,28 @@
 {
   "name": "decorator-application",
   "version": "1.0.0",
-  "description": "Uma aplicação TypeScript demonstrando arquitetura MVC e padrão Decorator",
-  "main": "dist/app.js",
+  "description": "Sistema de Gerenciamento de Produtos com Interface Web e Padrão Decorator",
+  "main": "server.js",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/app.js",
-    "dev": "ts-node src/app.ts",
+    "start": "node server.js",
+    "dev": "node server.js",
     "watch": "tsc --watch",
-    "clean": "rimraf dist"
+    "clean": "rimraf dist",
+    "console": "ts-node src/app.ts",
+    "web": "node server.js"
   },
-  "keywords": ["typescript", "node", "decorator"],
-  "author": "Seu Nome",
+  "keywords": ["typescript", "node", "decorator", "web", "mvc", "express"],
+  "author": "Desenvolvedor",
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^20.0.0",
+    "@types/express": "^4.17.21",
     "typescript": "^5.0.0",
     "ts-node": "^10.9.0",
     "rimraf": "^5.0.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
