--- a/package.json
+++ b/package.json
@@ -8,21 +8,27 @@
     "start": "node server.js",
     "dev": "node server.js",
     "watch": "tsc --watch",
-    "clean": "rimraf dist",
-    "console": "ts-node src/app.ts",
-    "web": "node server.js"
+    "clean": "rimraf dist"
   },
-  "keywords": ["typescript", "node", "decorator", "web", "mvc", "express"],
+  "keywords": [
+    "typescript",
+    "node",
+    "decorator",
+    "web",
+    "mvc",
+    "express"
+  ],
   "author": "Desenvolvedor",
   "license": "MIT",
   "devDependencies": {
-    "@types/node": "^20.0.0",
     "@types/express": "^4.17.21",
-    "typescript": "^5.0.0",
+    "@types/node": "^20.0.0",
+    "rimraf": "^5.0.0",
     "ts-node": "^10.9.0",
-    "rimraf": "^5.0.0"
+    "typescript": "^5.0.0"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mysql2": "^3.15.1"
   }
 }
